# src/main/java/app/foot/controller/PlayerController.java
@@ -2,9 +2,12 @@ package app.foot.controller;
 
 import app.foot.controller.rest.Player;
 import app.foot.controller.rest.mapper.PlayerRestMapper;
+import app.foot.repository.entity.PlayerEntity;
 import app.foot.service.PlayerService;
 import lombok.AllArgsConstructor;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
@@ -21,6 +24,12 @@ public class PlayerController {
         return service.getPlayers().stream()
                 .map(mapper::toRest)
                 .collect(Collectors.toUnmodifiableList());
+    }
+
+    @PostMapping("/players")
+    public List<PlayerEntity> postPlayers(@RequestBody List<app.foot.model.Player> players){
+        return service.postPlayers(players);
+
     }
 
     //TODO: add POST /players and add integration test ok and ko
